# advent_of_code_2024

./: Cargo.toml
crates/day-1/: Cargo.toml
crates/day-1/src/: day_1.rs
crates/day-10/: Cargo.toml
crates/day-10/src/: day_10.rs
crates/day-11/: Cargo.toml
crates/day-11/src/: day_11.rs
crates/day-12/: Cargo.toml
crates/day-12/src/: day_12.rs
crates/day-2/: Cargo.toml
crates/day-2/src/: day_2.rs
crates/day-3/: Cargo.toml
crates/day-3/src/: day_3.rs  lib.rs
crates/day-4/: Cargo.toml
crates/day-4/src/: day_4.rs  lib.rs  part_1.rs  part_2.rs
crates/day-5/: Cargo.toml
crates/day-5/src/: day_5.rs
crates/day-6/: Cargo.toml
crates/day-6/src/: day_6.rs
crates/day-7/: Cargo.toml
crates/day-7/src/: day_7.rs  lib.rs
crates/day-8/: Cargo.toml
crates/day-8/src/: day_8.rs  lib.rs
crates/day-9/: Cargo.toml
crates/day-9/src/: day_9.rs
src/: main.rs
