[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
regex = "1.11.1"
itertools = "0.13.0"

[dependencies]
day-1 = { path = "crates/day-1" }
day-2 = { path = "crates/day-2" }
day-3 = { path = "crates/day-3" }
day-4 = { path = "crates/day-4" }
day-5 = { path = "crates/day-5" }
day-6 = { path = "crates/day-6" }
day-7 = { path = "crates/day-7" }
day-8 = { path = "crates/day-8" }
day-9 = { path = "crates/day-9" }
day-10 = { path = "crates/day-10" }
day-11 = { path = "crates/day-11" }

